<resources>
    <string name="app_name">Grand Legacy Resturant</string>
    <string name="r_name">Welcome To Grand Legacy Resturant</string>
    <string name="r_start_btn">Get Started</string>
    <string name="r_dis">Feel The Royal Experience</string>
    <string name="i_name">Username :</string>
    <string name="l_namehint">Enter Your Email</string>
    <string name="l_password">Password :</string>
    <string name="l_passhint">Enter Your Password</string>
    <string name="l_forgot_txt">Forgot your Password..?</string>
    <string name="l_login">Login</string>
    <string name="l_sub_txt">Login to <br></br> Grand Legacy Resturant</string>
    <string name="l_create_txt">Create New Account</string>
    <string name="s_subject_txt">Signup</string>
    <string name="f_name">First Name :</string>
    <string name="l_name">Last Name :</string>
    <string name="s_age_txt">Date Of Birth :</string>
    <string name="s_fname_hint">Enter First Name</string>
    <string name="s_lname_hint">Enter Last Name</string>
    <string name="s_pNo_txt">Phone Number:</string>
    <string name="s_pNo_hint">Enter your Phone Number</string>
    <string name="s_un_text">Username :</string>
    <string name="s_un_hint">Enter Your Username</string>
    <string name="s_email_text">Email :</string>
    <string name="s_email_hint">Enter your email</string>
    <string name="s_pass_txt">Password :</string>
    <string name="s_pass_hint">Create Password</string>
    <string name="s_cpass_txt">Confirm Password :</string>
    <string name="s_cpass_hint">Re-Entered Password </string>
    <string name="s_submit_text">Submit</string>
    <string name="password">password</string>
    <string name="title_activity_nav_actvity">navActvity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_delivery">Delivery</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_profile">Profile</string>
    <string name="profile_layout">Profile layout</string>
    <string name="profile">profile_Fragment</string>
    <string name="p_fname">First Name :</string>
    <string name="p_title_txt">Profile Details</string>
    <string name="p_pno">Phone no :</string>
    <string name="sample_uname">Nimna523</string>
    <string name="sample_finame">Nimna</string>
    <string name="sample_lname">Thiranjaya</string>
    <string name="sample_dob">04/06/2020</string>
    <string name="sample_email">nimnathiranjaya523@gmail.com</string>
    <string name="sample_pno">0703002768</string>
    <string name="p_update_btntxt">Edit profile</string>
    <string name="p_delete_btntxt">Delete Profile</string>
    <string name="up_profile">Update User Profile</string>
    <string name="up_save">Save</string>
    <string name="up_cancle_txt">Cancle</string>
    <string name="d_subject">Your Orders</string>
    <string name="d_search_hint">Search Order ID</string>
    <string name="sort_orders">Sort Orders</string>
    <string name="order_id">Order Id :</string>
    <string name="d_name">Name :</string>
    <string name="d_back_btn_txt">Back</string>
    <string name="d_rece_btn_txt">Received</string>
    <string name="logot_btn">LOGOUT</string>
    <string name="al_adfood_btntxt">Add Food</string>
    <string name="al_vorder_btnxtx">Show Orders</string>
    <string name="al_admin_btntxt">Admin Profile</string>
    <string name="al_payment_btntxt">Show Payments</string>
    <string name="Admin_orders">Orders</string>
    <string name="string_admin_orders">Orders</string>
    <string name="title_activity_order_status_upsdate">OrderStatusUpsdate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ad_order_sybjecttxt">Order</string>
    <string name="order_status">Hand Over to Delivery Person</string>
    <string name="l_email">Email</string>
    <string name="updatePP_save_txt">Save</string>
    <string name="uploadPP_cancle_txt">Close</string>
    <string name="addtip_hint">Enter Tip For Delivery person</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="address">Address :</string>
    <string name="todo">TODO</string>
    <string name="time_remaining_to_hand_over">Time Remaining To Hand Over</string>
    <string name="add_tip">Add Tip</string>
    <string name="forgetemailhint">Enter Your Email</string>


</resources>