<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_Fragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/delivery_Fragment"
        android:icon="@drawable/ic_baseline_airport_shuttle_24"
        android:title="@string/nav_delivery" />
    <item
        android:id="@+id/cart_Fragment"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/Rate_us_Fragment"
        android:icon="@drawable/ic_baseline_rate_review_24"
        android:title="@string/nav_rate_us" />
    <item
        android:id="@+id/profile_Fragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/nav_profile" />
</menu>