<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/AL_subject"
        android:layout_width="222dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/new_rocker"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AL_subject"
        app:srcCompat="@drawable/gl_logo" />

    <Button
        android:id="@+id/al__addfood_btn"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/al_adfood_btntxt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/al__vorder_btn"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/al_vorder_btnxtx"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/al__addfood_btn" />

    <Button
        android:id="@+id/al__payment_btn"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/al_payment_btntxt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/al__adminp_btn3" />

    <Button
        android:id="@+id/al__logout_btn"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:text="@string/logot_btn"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/al__payment_btn"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/al__adminp_btn"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/al_admin_btntxt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/al__vorder_btn" />

    <Button
        android:id="@+id/al__adminp_btn2"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="food"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/al__adminp_btn" />

    <Button
        android:id="@+id/al__adminp_btn3"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="Categories"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/al__adminp_btn2" />

</androidx.constraintlayout.widget.ConstraintLayout>